--- a/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -1,16 +1,10 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes">
+  <li *ngFor="let hero of heroes"
+      [class.selected]="hero === selectedHero"
+      (click)="onSelect(hero)">
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
-<!--The word uppercase in the interpolation binding, right after the pipe operator (|), activates the built-in UpperCasePipe-->
-<div>
-  <label for="name"> Hero name: </label>
-  <input id="name"
-         [(ngModel)]="hero.name"
-         placeholder="name">
-</div>
-<h2>{{hero.name | uppercase}} Details</h2>
-<div><span>id: {{hero.id}}</span></div>
-<div><span>name: {{hero.name}}</span></div>
+<!--[hero]="selectedHero" is an Angular property binding-->
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
